# photo-metadata-editor

./: .gitignore  AGENTS.md  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml  setup_msi.py
docs/: OPEN_SOURCE_AUDIT.md  THIRD_PARTY.md
scripts/: build_exe.ps1  build_msi.ps1  build_release.ps1  check_package_privacy.py  collect_licenses.py  generate_windows_version_info.py  path_safety.py  prune_runtime_payload.py  sign_artifacts.ps1  windows_version_info.txt
src/photo_meta_editor/: __init__.py  __main__.py  app.py  exiftool.py  fields.py  i18n.py  metadata.py  ocr.py  presets.py  settings.py
tests/: test_app.py  test_build_scripts.py  test_collect_licenses.py  test_entrypoint.py  test_exiftool.py  test_fields.py  test_i18n.py  test_metadata.py  test_ocr.py  test_presets.py  test_privacy_scan.py  test_prune_runtime_payload.py  test_settings.py
